# Kha

./: .clang-format  .codeclimate.yml  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  CNAME  README  README.md  _config.yml  app.js  appveyor.yml  build.bat  build.html  build.hxml  build.sh  checkstyle-exclude.json  checkstyle.bat  checkstyle.json  create.html  docs.bat  docs.hxml  docs.sh  download.html  errata.html  get_dlc  get_dlc.bat  get_dlc_dangerously  get_dlc_dangerously.bat  getstarted.html  haxelib.json  hxformat.json  index.html  install.html  kincfile.js  korefile.js  license.txt  make.bat  make.js  (+8 more)
.github/: FUNDING.yml  funding-.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/issue_template/: bug_report.md
.github/workflows/: android-native-opengl.yml  android-native-vulkan.yml  android-native.yml  android-opengl.yml  android-vulkan.yml  android.yml  ccpp.yml  dox.yml  flash.yml  html5.yml  html5worker.yml  ios-metal.yml  ios-opengl.yml  ios.yml  java.yml  krom.yml  linux-hl-opengl.yml  linux-opengl.yml  linux-vulkan.yml  linux.yml  macos-hl-metal.yml  macos-metal.yml  macos-opengl.yml  macos.yml  node.yml  uwp.yml  windows-direct3d11.yml  windows-direct3d12.yml  windows-direct3d9.yml  windows-hl-direct3d11.yml  windows-opengl.yml  windows-vulkan.yml  windows.yml  wpf.yml
Backends/C#/: Xml.hx
Backends/HTML5/: Float32Array.hx  Uint16Array.hx  WebGLRenderingContext.hx
Backends/Kinc-HL/: kfile.js  kincfile.js
Backends/Kinc-HL/hl/libs/fmt/: CMakeLists.txt  dxt.c  fmt.c  fmt.vcxproj  fmt.vcxproj.filters  fmt_crypto.c  mikkt.c  sha1.c  sha1.h
Backends/Kinc-HL/hl/libs/ssl/: CMakeLists.txt  ssl.c  ssl.vcxproj  ssl.vcxproj.filters
Backends/Kinc-hxcpp/: kfile.js  kincfile.js  main.cpp  pch.h
Backends/Kore/: Json.cpp  Json.h  jsmn.cpp  jsmn.h  main.cpp  test.natvis
Backends/Kore-HL/: kfile.js
Backends/Kore-hxcpp/: kfile.js
Backends/KoreHL/: kincfile.js  korefile.js
Backends/Krom/: Krom.hx
Backends/Kt/: main.cpp
Backends/Unity/: Point.hx  UnityBackend.hx
Backends/hxcpp/: RegExp.cpp  main.cpp
Backends/hxcpp-Kt/: Image.cpp  Image.h  Music.cpp  Music.h  Painter.cpp  Painter.h  Sound.cpp  Sound.h
Editor_/: .project
Issues/: 1000b503-8abc-476a-89b9-79b24116a09e  1275f0c5-0538-4596-865a-039a1d5c4bcb  138f7225-ae63-4ef3-86cb-36176f75a9e8  307e7680-ea13-4fa4-811a-dcfe346d74db  476b1588-1130-44cc-8067-0e1d4c8d65a9  4c3a784d-a579-471a-bd08-b4596a174c37  4e6434a5-8b77-4b86-a3e9-27c3d9131e10  858d95fd-12d9-4ee3-a880-30e4653d6361  86443dea-5a4e-4b48-b623-d8ee288600ed  a92f98a8-5bad-44dc-9ab7-e1e10a75cba5  b5ac0b49-fe27-4fee-9d82-7cfd369bd438  e0dac65f-c90a-42f6-b27b-302d056757e1  f4d34284-8dcd-49e3-acd8-a264115c2226  fe8a61bf-53be-40d8-9d35-d52847ed246c  ff5736b0-da60-465f-9c38-62a0617e6717
Sources/Shaders/: clear.comp.glsl  painter-colored.frag.agal  painter-colored.frag.glsl  painter-colored.vert.agal  painter-colored.vert.glsl  painter-image.frag.agal  painter-image.frag.glsl  painter-image.vert.agal  painter-image.vert.glsl  painter-text.frag.agal  painter-text.frag.glsl  painter-text.vert.agal  painter-text.vert.glsl  painter-video.frag.glsl  painter-video.vert.glsl  painter.frag.glsl  painter.vert.glsl  scene-mesh.frag.glsl  scene-mesh.vert.glsl
Sources/haxe/: Timer.hx
Sources/kha/: AnimatedImageCursor.hx  Animation.hx  AssetError.hx  Assets.hx  Blob.hx  Button.hx  Canvas.hx  CodeStyle.hx  CollisionLayer.hx  Color.hx  CompilerDefines.hx  Configuration.hx  Cursor.hx  DepthStencilFormat.hx  Direction.hx  Display.hx  DisplayMode.hx  EmptyScreen.hx  EnvironmentVariables.hx  FastFloat.hx  Float32ArrayExtensions.hx  Font.hx  FontStyle.hx  FrameCountTimer.hx  Framebuffer.hx  FramebufferOptions.hx  Game.hx  HaxelibRunner.hx  HighscoreList.hx  Image.hx  ImageCursor.hx  Json.hx  Key.hx  KeyEvent.hx  Kravur.hx  Loader.hx  LoaderBuilder.hx  LoaderOld.hx  LoadingScreen.hx  Media.hx  (+37 more)
Tests/Empty/: khafile.js  project.kha
Tests/Gamepads/: configure-msvc2010-opengl.cmd  khafile.js
Tests/MultiWindow/: Readme.md  khafile.js
Tools/: oggenc-linux  oggenc-osx  platform.sh
_includes/: head.html  header.html  help.html  menu-default.html  menu-following.html  menu-list.html  menu-sidebar.html
_posts/: 2016-03-31-welcome-to-jekyll.markdown
api/: 404.html  dark-mode.css  extra-styles.css  haxe-nav.css  highlighter.css  highlighter.js  index.html  index.js  nav.js  styles.css
api/kha/: AlignedQuad.html  AssetError.html  Assets.html  Blob.html  Canvas.html  CodeStyle.html  Color.html  Display.html  DisplayImpl.html  DisplayMode.html  EnvironmentVariables.html  FastFloat.html  Float32ArrayExtensions.html  Font.html  FontStyle.html  FrameTask.html  Framebuffer.html  FramebufferOptions.html  HaxelibRunner.html  Image.html  Kravur.html  KravurImage.html  LoaderImpl.html  OldSystemOptions.html  Resource.html  Rotation.html  Scaler.html  Scheduler.html  ScreenCanvas.html  ScreenRotation.html  Shaders.html  Sound.html  Storage.html  StorageFile.html  StringExtensions.html  System.html  SystemImpl.html  SystemOptions.html  TargetRectangle.html  TimeTask.html  (+6 more)
assets/css/: style.css
backends/android/: AndroidMusic.java  AndroidSound.java  AndroidSystem.java  BitmapImage.java  CanvasPainter.java  Game.java  GameThread.java  GameView.java  ResourceLoader.java
backends/gwt/: CanvasPainter.java  Game_gwt.java  GreetingService.java  GreetingServiceAsync.java  LevelMap.java  WebImage.java  WebLoader.java  WebMusic.java  WebSound.java  WebSystem.java
editor/src/: Editor.java  JavaSaver.java  Level.java  Loader.java  Saver.java  Tileset.java  TilesetPanel.java
haxe/: CppProject.hxproj  FlashProject.hxproj  JSProject.hxproj  New Project.hxproj  Run.bat
haxe/src/: Main.hx
old/: .gitignore  License.txt  README.md  package.json  server.js
public/: index.html
public/download/: index.html
public/getstarted/: build.html  create.html  install.html
public/semantic/: semantic.css  semantic.js
public/stylesheets/: style.css
semantic/: semantic.min.css  semantic.min.js
semantic/components/: accordion.min.css  accordion.min.js  ad.css  (+34 more)
(+2489 files in other folders)
